--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d docs",
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -rf docs && mv build docs",
+    "build": "react-scripts build && del docs && move build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
